--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.6.0",
+    "firebase-admin": "^11.11.1",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
+    "helmet": "^7.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0"
   },
