--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.3.2",
+    "@tanstack/react-query": "^5.8.7",
+    "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "firebase-admin": "^11.11.1",
     "flowbite": "^2.2.0",
@@ -23,8 +26,11 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-parallax-tilt": "^1.7.175",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.20.0",
-    "sort-by": "^1.2.0"
+    "react-slick": "^0.29.0",
+    "sort-by": "^1.2.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
