--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@smastrom/react-rating": "^1.3.2",
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
@@ -18,6 +19,7 @@
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
     "helmet": "^7.1.0",
+    "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -29,6 +31,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.20.0",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.5"
   },
