--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@smastrom/react-rating": "^1.3.2",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
     "firebase-admin": "^11.11.1",
     "flowbite": "^2.2.0",
@@ -21,6 +24,7 @@
     "helmet": "^7.1.0",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.293.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
