--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.20.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.5"
   },
@@ -51,5 +52,9 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "vite": "^5.0.0"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC"
 }
