--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-spinners": "^0.13.8",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "use-count-up": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
