--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-spinners": "^0.13.8",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.1",
     "swiper": "^11.0.5",
     "use-count-up": "^3.0.1"
   },
